posix_timezone field
